[package]
name = "selfhash"
version = "0.1.3"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"

[features]
# This enables support for the BLAKE3 hash function via the blake3 crate.
blake3 = ["dep:blake3"]
# This provides the default implementation of the SelfHashable::write_digest_data method for when a
# SelfHashable implements Clone and the desired serialization format is JSON Canonicalization Scheme (JCS).
jcs = ["dep:serde", "dep:serde_json_canonicalizer"]
# This enables serde support for for KERIHash and NamedHashFunction types.
serde = ["dep:serde", "dep:serde_with"]
# This enables support for the SHA-256 hash function via the sha2 crate.
sha-256 = ["dep:digest", "dep:lazy_static", "dep:sha2"]
# This enables support for the SHA-512 hash function via the sha2 crate.
sha-512 = ["dep:digest", "dep:lazy_static", "dep:sha2"]

[dependencies]
base64 = { version = "0.21.4", default-features = false }
blake3 = { version = "1.4.1", optional = true, default-features = false, features = [
    "std",
] }
derive_more = { version = "0.99.17", default-features = false, features = [
    "deref",
    "display",
    "from",
    "into",
] }
digest = { version = "0.10.7", optional = true }
lazy_static = { version = "1.4", optional = true, default-features = false }
serde = { version = "1.0", optional = true, default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json_canonicalizer = { version = "0.2.0", optional = true }
serde_with = { version = "3.3.0", optional = true, default-features = false, features = [
    "macros",
] }
sha2 = { version = "0.10.7", optional = true, default-features = false, features = [
    "std",
] }

[dev-dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json_canonicalizer = "0.2.0"
serde_with = { version = "3.3.0", default-features = false, features = [
    "macros",
] }
serial_test = "2.0.0"
