[package]
name = "selfhash-bin"
version = "0.6.2"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
maplit = { workspace = true }
mbx = { workspace = true }
selfhash = { path = "..", features = [
    "all-hash-functions",
    "mbx",
    "self-hashable-json",
] }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }

[[bin]]
name = "selfhash"
path = "main.rs"
